# bs

./: .env.sample  .gitignore  README.md  pyproject.toml
bs/: __main__.py  anti_captcha.py  anticaptcha.py  burning_series.py  dns_override.py  models.py  util.py
bs/burning_series/: __init__.py  episode.py  season.py  series.py
bs/hoster/: __init__.py  doodstream.py  streamtape.py  vidoza.py  voe.py
tests/: test_hoster.py
